# avro-to-python

./: .gitignore  README.rst  helpers.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: main.yml  pypi-test.yml  release.yml
avro_to_python/: avpr_to_avsc.py
avro_to_python/classes/: file.py
avro_to_python/reader/: read.py
avro_to_python/utils/avro/: helpers.py
avro_to_python/utils/avro/files/: meta.py  record.py
avro_to_python/utils/avro/types/: array.py  enum.py  map.py  primitive.py  record.py  reference.py  type_factory.py  union.py
avro_to_python/writer/: writer.py
avro_to_python_etp/raw_files/examples/: simple.rs
avro_to_python_etp/reader/: read.py
avro_to_python_etp/templates/: baseTemplate.j2
avro_to_python_etp/templates/fields/: arrayField.j2  fieldFactory.j2  mapField.j2  primitiveField.j2  referenceField.j2  unionField.j2
avro_to_python_etp/templates/files/: cargo.j2  default_protocols.j2  enum.j2  fixed.j2  helpers.j2  lib.j2  main.j2  mod.j2  record.j2
avro_to_python_etp/templates/imports/: basicImports.j2  fileImports.j2
avro_to_python_etp/templates/partials/: avroSchema.j2  footer.j2  header.j2
avro_to_python_etp/utils/avro/: helpers.py  primitive_types.py
avro_to_python_etp/writer/: writer.py
avro_to_rust_etp/: __init__.py  avpr_to_avsc.py  cli.py
avro_to_rust_etp/classes/: field.py  file.py
avro_to_rust_etp/raw_files/examples/: simple.rs
avro_to_rust_etp/raw_files/src/: helpers.rs  lib.rs
avro_to_rust_etp/raw_files/tests/: test_enum_serial.rs
avro_to_rust_etp/reader/: __init__.py  read.py
avro_to_rust_etp/templates/: baseTemplate.j2  macro.j2
avro_to_rust_etp/templates/fields/: arrayField.j2  fieldFactory.j2  mapField.j2  referenceField.j2  unionField.j2
avro_to_rust_etp/templates/files/: cargo.j2  default_protocols.j2  enum.j2  fixed.j2  protocol_helper.j2  record.j2
avro_to_rust_etp/templates/imports/: basicImports.j2  fileImports.j2
avro_to_rust_etp/templates/partials/: avroSchema.j2  header.j2  meta.j2
avro_to_rust_etp/utils/avro/: helpers.py  primitive_types.py
avro_to_rust_etp/utils/avro/files/: enum.py  fixed.py  meta.py  record.py
avro_to_rust_etp/utils/avro/types/: array.py  enum.py  map.py  primitive.py  record.py  reference.py  type_factory.py  union.py
avro_to_rust_etp/writer/: __init__.py  writer.py
