[project]
name = "avro-to-python"
version = "1.0.0"
authors = [
  "Scott Rothbarth <>",
  "Lionel Untereiner <lionel.untereiner@geosiris.com>",
  "Valentin Gauthier <valentin.gauthier@geosiris.com>"
]
description = "avro-to-python is a light tool for compiling avro schema files (.avsc) to python classes making using avro schemata easy."
readme = "README.rst"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/geosiris-technologies/avro-to-python"
"Bug Tracker" = "https://github.com/geosiris-technologies/avro-to-python/issues"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "avro-to-python"
version = "1.0.0"
description = "avro-to-python is a light tool for compiling avro schema files (.avsc) to python classes making using avro schemata easy."
authors = [
  "Scott Rothbarth <>",
  "Lionel Untereiner <lionel.untereiner@geosiris.com>",
  "Valentin Gauthier <valentin.gauthier@geosiris.com>"
]
readme = "README.rst"
license = "MIT"

[tool.setuptools_scm]