[tool.poetry]
name = "avro-to-python"
version = "1.0.0"
authors = [
  "Scott Rothbarth <srserves85@gmail.com>",
  "Lionel Untereiner <lionel.untereiner@geosiris.com>",
  "Valentin Gauthier <valentin.gauthier@geosiris.com>"
]
description = "avro-to-python is a light tool for compiling avro schema files (.avsc) to python classes making using avro schemata easy."
readme = "README.rst"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3.1"

[project.urls]
"Homepage" = "https://github.com/geosiris-technologies/avro-to-python"
"Bug Tracker" = "https://github.com/geosiris-technologies/avro-to-python/issues"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
Jinja2 = "^3.1.2"
click = "^8.1.3"
anytree = "^2.8.0"
nested-lookup = "^0.2.25"
typingx = "^0.6.0"
wheel = "^0.37.1"

[tool.setuptools_scm]